--- a/explore_twint.ipynb
+++ b/explore_twint.ipynb
@@ -2,24 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'twint'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-2eb7ee626b84>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtwint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'twint'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import twint\n",
-    "\n"
+    "# fix for jupyter notebook\n",
+    "# otherwise will get event already running error\n",
+    "\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import twint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configure\n",
+    "c = twint.Config()\n",
+    "c.Username = \"narendramodi\"\n",
+    "c.Limit = 10\n",
+    "c.Search = [\"India\"]\n",
+    "# Run\n",
+    "twint.run.Search(c)\n"
    ]
   },
   {
@@ -29,15 +44,18 @@
    "outputs": [],
    "source": [
     "c = twint.Config()\n",
-    "c.Username = \"noneprivacy\"\n",
-    "c.Limit = 100\n",
-    "c.Store_csv = True\n",
-    "c.Output = \"none.csv\"\n",
-    "c.Lang = \"en\"\n",
-    "c.Translate = True\n",
-    "c.TranslateDest = \"it\"\n",
-    "twint.run.Search(c)\n"
+    "c.Limit = 1\n",
+    "c.Username = \"\"\n",
+    "# Run\n",
+    "twint.run.Followers(c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -56,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
